--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -4,114 +4,141 @@
 # 技术社区 - https://community.nssurge.com
 
 [General]
-# > 日志级别
+# 日志级别
 loglevel = notify
-show-error-page-for-reject = true
-# > 允许 Wi-Fi 访问 (仅 iOS,若允许远程访问将「false」改为「true」)
-allow-wifi-access = false
-wifi-access-http-port = 6152
-wifi-access-socks5-port = 6153
-# > 允许 Wi-Fi 访问 (仅 macOS，若允许远程访问将「127.0.0.1」改为「0.0.0.0」)
-http-listen = 127.0.0.1:6152
-socks5-listen = 127.0.0.1:6153
-# > All Hybrid 网络并发
-all-hybrid = false
-# > 测试超时(秒)
+# 节点超时
 test-timeout = 3
-# > Internet 测试 URL
-internet-test-url = http://www.apple.com/library/test/success.html
-# > 代理测速 URL
-proxy-test-url = http://cp.cloudflare.com/generate_204
-# > GeoIP数据库
-geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
-# > 排除简单主机名
-exclude-simple-hostnames = true
-# > DNS 服务器
-dns-server = 119.29.29.29, 180.184.1.1, 223.5.5.5, system
+# 直连测试 URL
+internet-test-url = http://www.baidu.com
+# 代理测速 URL
+proxy-test-url = http://1.1.1.1/generate_204
+# 游戏优化:开启后优先处理 UDP 数据，会增加系统负载
+udp-priority = false
+# UDP 回退行为
+udp-policy-not-supported-behaviour = REJECT
+# DNS 服务器
+dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
+# 加密 DNS
+encrypted-dns-server = quic://223.5.5.5, quic://223.6.6.6, https://1.12.12.12/dns-query, https://120.53.53.53/dns-query
+# IPv6 DNS 查询
+ipv6 = false
+# IPv6 VIF 模式
+ipv6-vif = disabled
+# DNS 劫持
 hijack-dns = *:53
-# > 从 /etc/hosts 读取 DNS 记录
-read-etc-hosts = true
-# > 远程控制器
-http-api-web-dashboard = false
-use-default-policy-if-wifi-not-primary = false
-# > 跳过代理
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
-# > Always Real IP Hosts
-always-real-ip = *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.logon.battlenet.com.cn, *.logon.battle.net, stun.l.google.com
+# 展示错误页面
+show-error-page-for-reject = true
+# 排除简单主机名
+exclude-simple-hostnames = true
+# 自定义 GeoIP 数据库
+geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 [Proxy Group]
-通透世界 = select, Nexitally, 守候, Metaverse, NewYun
-Nexitally = select, policy-path=https://sub.store/download/Nexitally, update-interval=86400
-守候 = select, policy-path=https://sub.store/download/wait, update-interval=86400
-Metaverse = select, policy-path=https://sub.store/download/Metaverse, update-interval=86400
-TAG = select, policy-path=https://sub.store/download/TAG, update-interval=86400
-Apple = select, DIRECT, 通透世界
-Bilibili = select, DIRECT, 通透世界, 香港, 台湾
-Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
-TikTok = select, 通透世界, DIRECT, 日本, 美利坚
-Instagram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
-Twitter = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
-PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
-Emby = select, 通透世界, 守候
-国外媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
-Guard = select, REJECT, REJECT-TINYGIF, DIRECT
-地爆天星 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚
-香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
-台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
-新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
-日本 = select, policy-regex-filter=🇯🇵|日本|JP|Japan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
-美利坚 = select, policy-regex-filter=🇺🇸|美国|US|United, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
+通透世界 = select, 独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, 独角兽, To2, icon-url=https://raw.githubusercontent.com/githubdulong/Script/master/Images/Surge_1.png
+地爆天星 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚, icon-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Proxy.png
+独断万古 = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/131.png
+Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/Linkeless.png
+SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/150.png
+异次元杀阵 = select, policy-path=https://sub.store/download/dimension, update-interval=86400, icon-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png
+Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/Texon.png
+SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/SYN.png
+独角兽 = select, policy-path=https://sub.store/download/unicorn, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/Unicorn.png
+To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/To2.png
+Apple = select, DIRECT, 通透世界, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
+Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/BiliBili.png
+Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/telegram.png
+TikTok = select, 通透世界, DIRECT, 新加坡, 日本, 美利坚, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/chxm1023/TikTok.png
+OpenAI = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/chxm1023/ChatGPT5.png
+PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/softlyx/PikPak.png
+Instagram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/instagram(2).png
+X = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/X.png
+守候Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/GuGu.png
+SYNEmby = select, policy-path=https://sub.store/download/SYN, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/Texon_emby.png
+流媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/youtube.png
+Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/092.png
+香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+日本 = select, policy-regex-filter=🇯🇵|日本|JP|Japan, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+美利坚 = select, policy-regex-filter=🇺🇸|美国|US|United, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
+Aladdin = select, policy-path=https://sub.store/download/Aladdin, update-interval=86400, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/AladdinLottery.png
+ESNC = select, policy-path=https://sub.store/download/ESNC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/ESNC.png
+CTC = select, policy-path=https://sub.store/download/CTC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/CTC.png
+私房菜 = select, policy-path=https://sub.store/download/SFC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/SFC.png
+ACA = select, policy-path=https://sub.store/download/ACA, update-interval=86400, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/aca.png
 
 [Rule]
-# > 微信
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat.list,DIRECT
-# > 苹果服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,Apple
-# > Bilibili
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,Bilibili
-# > 谷歌服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,通透世界
-# > Telegram
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,Telegram
-# > TikTok
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list,TikTok
-# > Instagram
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Instagram/Instagram.list,Instagram
-# > Twitter
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list,Twitter
-# > PikPak
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/PikPak/PikPak.list,PikPak
-# > Emby
-RULE-SET,https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/QuantumultX/filter/Emby.list,Emby
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Emby/Emby.list,Emby
-# > 国内流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMedia/ChinaMedia.list,DIRECT
-# > 国外流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list,国外媒体
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list,国外媒体
-# > 广告终结者
-DOMAIN-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge2.txt,Guard
-# > Privacy 隐私
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy.list,Guard
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy_Domain.list,Guard
-# > Hijacking 运营商劫持或恶意网站
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list,Guard
-# > 通透世界
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy.list,通透世界
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy_Domain.list,通透世界
-# > China
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Download/Download.list,DIRECT
-# 防止应用循环请求
-IP-CIDR,0.0.0.0/32,REJECT,no-resolve
-# > 局域网地址
-RULE-SET,LAN,DIRECT
 # > 机场订阅
-DOMAIN,rjptcl.lol,DIRECT
-DOMAIN-KEYWORD,www.jinglongyu.com,通透世界
+DOMAIN,synn.cc,通透世界
+DOMAIN,acl.syyn.pw,通透世界
+DOMAIN,subcc.sntp.uk,DIRECT
+DOMAIN,www.jinglongyu.com,通透世界
+# > 🍟🍟
+RULE-SET,http://❤️🍟/HTTPDNS,REJECT
+
+# > SukkaW 广告拦截 / 隐私保护 / Malware 拦截 / Phiishing 拦截
+DOMAIN-SET,https://ruleset.skk.moe/List/domainset/reject.conf,Guard,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/reject.conf,Guard,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-no-drop.conf,REJECT-NO-DROP,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-drop.conf,REJECT-DROP,extended-matching
+# Apple & Microsoft 国内 CDN 域名
+RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cdn.conf,DIRECT
+# RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft_cdn.conf,DIRECT
+RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cn.conf,DIRECT
+# > 局域网地址
+RULE-SET,https://ruleset.skk.moe/List/non_ip/lan.conf,DIRECT
+RULE-SET,https://ruleset.skk.moe/List/ip/lan.conf,DIRECT
+
+# > 微信
+RULE-SET,http://bm7/WeChat,DIRECT
+# > 字节跳动
+RULE-SET,http://bm7/ByteDance,DIRECT
+# > 抖音
+# RULE-SET,http://bm7/DouYin,DIRECT
+# > Bilibili
+RULE-SET,http://bm7/BiliBili,Bilibili
+# Telegram
+RULE-SET,https://ruleset.skk.moe/List/non_ip/telegram.conf,Telegram
+RULE-SET,https://ruleset.skk.moe/List/ip/telegram.conf,Telegram
+RULE-SET,https://ruleset.skk.moe/List/ip/telegram_asn.conf,Telegram
+# > TikTok
+RULE-SET,http://bm7/TikTok,TikTok
+# > Instagram
+RULE-SET,http://bm7/Instagram,Instagram
+# > Twitter
+RULE-SET,http://bm7/Twitter,X
+# > PikPak
+RULE-SET,http://bm7/PikPak,PikPak
+# > OpenAI
+RULE-SET,https://ruleset.skk.moe/List/non_ip/ai.conf,OpenAI
+# > 守候Emby
+DOMAIN-SUFFIX,cn2gias.uk,守候Emby
+# > SYNEmby
+DOMAIN,stream.synn.cc,SYNEmby
+DOMAIN,stream-zz.synn.cc,SYNEmby
+# > 国内流媒体
+RULE-SET,http://bm7/ChinaMedia,DIRECT
+# > 国外流媒体
+RULE-SET,https://ruleset.skk.moe/List/non_ip/stream.conf,流媒体,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/ip/stream.conf,流媒体,extended-matching
+# > Proxy
+RULE-SET,https://ruleset.skk.moe/List/non_ip/global.conf,通透世界
+RULE-SET,http://bm7/Proxy_All,通透世界
+# > China
+RULE-SET,http://bm7/HuYa,DIRECT
+RULE-SET,https://ruleset.skk.moe/List/non_ip/domestic.conf,DIRECT
+RULE-SET,https://ruleset.skk.moe/List/non_ip/direct.conf,DIRECT
+RULE-SET,http://bm7/China,DIRECT
+RULE-SET,http://bm7/Download,DIRECT
 # > ASN
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN.list,DIRECT
+RULE-SET,http://bm7/ChinaASN,DIRECT
 # > GeoIP China
-# GEOIP,CN,DIRECT
-# > 最终->地爆天星
+GEOIP,CN,DIRECT
+# > FINAL规则-地爆天星
 FINAL,地爆天星
+
+[URL Rewrite]
+^http:\/\/bm7\/(.*?)(_.*)?$ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/$1/$1$2.list 302
+
+^http:\/\/xn--qeiz318m\/HTTPDNS http://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/HTTPDNS.Block.list 302
